[FIX] point_of_sale: long floor name doesn't display properly
How to reproduce
=================

When entering a very long table name and / or a very long table name on
the point of sale application, the text displayed on the "go back" button of the interface will overflow,
making the name unreadable and not very pleasing to see.

How the fix works
=================

The fix just cut and hide the part of the text that is overflowing

opw-3102914

closes odoo/odoo#108913

--- a/addons/pos_restaurant/static/src/css/restaurant.css
+++ b/addons/pos_restaurant/static/src/css/restaurant.css
@@ -285,18 +285,20 @@
 
 .pos .order-button.floor-button {
     display: flex;
-    align-items: center;
     background: #6EC89B;
     font-weight: bold;
     font-size: 16px;
     padding-left: 16px;
     padding-right: 16px;
+    overflow-wrap: anywhere;
+    text-overflow: hidden;
 }
 .pos .order-button.floor-button .table-name {
     font-weight: normal;
 }
 .pos .order-button.floor-button .fa{
     font-size: 24px;
+    line-height: 42px;
 }
 /* ------ ORDER LINE STATUS ------- */
 
